[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scripts/Icon.gd" type="Script" id=1]
[ext_resource path="res://Assets/Sprites/icons/trashbin.png" type="Texture" id=2]
[ext_resource path="res://Assets/Sprites/icon2.png" type="Texture" id=3]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "console",
"speed": 5.0
}, {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "trashbin",
"speed": 5.0
} ]

[sub_resource type="StyleBoxEmpty" id=2]

[node name="Icon" type="Node2D"]
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "console"

[node name="Button" type="Button" parent="."]
margin_left = -16.0
margin_top = -16.0
margin_right = 16.0
margin_bottom = 16.0
custom_styles/focus = SubResource( 2 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="doubleclickTimer" type="Timer" parent="."]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="timeout" from="doubleclickTimer" to="." method="_on_doubleclickTimer_timeout"]
